# alter-jira

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
src/: main.py
src/config/: settings.py
