[tool.poetry]
name = "alter-jira"
version = "0.1.0"
description = ""
authors = ["andre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"
uvicorn = "^0.30.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
